content/en/docs/25.0/user-guides/operating-vitess/backup-and-restore/overview.md
---
title: Overview
weight: 1
aliases: ['/docs/user-guides/backup-and-restore/']
---

Backup and Restore are integrated features provided by tablets managed by Vitess. As well as using _backups_ for data integrity, Vitess will also create and restore backups for provisioning new tablets in an existing shard.

## Concepts

Vitess supports pluggable interfaces for both [Backup Storage Services](https://github.com/vitessio/vitess/blob/main/go/vt/mysqlctl/backupstorage/interface.go) and [Backup Engines](https://github.com/vitessio/vitess/blob/main/go/vt/mysqlctl/backupengine.go).

### Backup Storage Services

Currently, Vitess has plugins for:

* File (using a path on shared storage, e.g. an NFS mount)
* Google Cloud Storage
* Amazon S3
* Ceph

### Backup Engines

The engine is the techology used for generating the backup. Currently Vitess has plugins for:

* Builtin: Shutdown an instance and copy all the database files (default)
* XtraBackup: An online backup using Percona's [XtraBackup](https://www.percona.com/software/mysql-database/percona-xtrabackup)
* MySQL Shell: a logical backup engine using the upstream [mysqlsh](https://dev.mysql.com/doc/mysql-shell/8.0/en/) dump/load tool (EXPERIMENTAL)

### Backup types

Vitess supports full backups as well as incremental backups, and their respective counterparts full restores and point-in-time restores.

* A full backup contains the entire data in the database. The backup represents a consistent state of the data, i.e. it is a snapshot of the data at some point in time.
* An incremental backup contains a changelog, or a transition of data from one state to another. Vitess implements incremental backups by making a copy of MySQL binary logs.

Generally speaking and on most workloads, the cost of a full backup is higher, and the cost of incremental backups is lower. The time it takes to create a full backup is significant, and it is therefore impractical to take full backups in very small intervals. Moreover, a full backup consumes the disk space needed for the entire dataset. Incremental backups, on the other hand, are quick to run, and have very little impact, if any, to the running servers. They only contain the changes in between two points in time, and on most workloads are more compact.

Full and incremental backups are expected to be interleaved. For example: one would create a full backup once per day, and incremental backups once per hour.

Full backups are simply states of the database. Incremental backups, however, need to start with some point and end with some point. The common practice is for an incremental backup to continue from the point of the last good backup, which can be a full or incremental backup. An inremental backup in Vitess ends at the point in time of execution.

The identity of the tablet on which a full backup or an incremental backup is taken is immaterial. It is possible to take a full backup on one tablet and incremental backups on another. It is possible to take full backups on two different tablets. It is also possible to take incremental backups, independently, on two different tablets, even though the contents of those incremental backups overlaps. Vitess uses MySQL GTID sets to determine positioning and prune duplicates.

### Restores

Restores are the counterparts of backups. A restore uses the engine utilized to create a backup. One may run a restore from a full backup, or a point-in-time restore (PITR) based on additional incremental backups.

A Vitess restore operates on a tablet. The restore process completely wipes out the data in the tablet's MySQL server and repopulates the server with the backup(s) data. The MySQL server is shutdown during the process. As a safety mechanism, Vitess by default prevents a restore onto a `PRIMARY` tablet. Any non-`PRIMARY` tablet is otherwise eligible to restore.

### Restore Types

Vitess supports full restores and incremental (AKA point-in-time) restores. The two serve different purposes.

* A full restore loads the dataset from a full backup onto a non-`PRIMARY` tablet. Once the data is loaded, the restore process starts the MySQL service and makes it join the replication stream. It is expected that a freshly restored server will lag behind the shard's `PRIMARY` for a period of time.
  The full restore flow is useful for seeding new replica tablets. It may also be used to fix replicas that have been corrupted.
* An incremental, or a point-in-time restore, restores a tablet/MySQL up to a specific position or time. This is done by first loading a full backup dataset, followed by applying the changelog captured in zero or more incremental backups. Once that is complete, the tablet type is set to `DRAINED` and the tablet does _not_ join the replication stream.
  The common purpose of point-in-time restore is to recover data from an accidental write/deletion. If the database administrator knows at about what time the accidental write took place, they can restore a replica tablet to a point in time shortly before the accidental write. Since the server does not join the replication stream, its data then remains static, and the administrator may review or copy the data as they please. Finally, it is then possible to change the tablet type back to `REPLICA` and have it join the shard's replication.

## Vtbackup, VTTablet and Vtctld

Vtbackup, VTTablet, and Vtctld may all participate in backups and restores.

 * Vtbackup is a standalone program that restores the last backup into an empty mysqld installation, replicates new changes into that installation, and takes a new backup from that installation.
 * VTTablet can be configured to restore from a backup, or to take a new backup.
 * Vtctld can be instructed to take backups with commands like `Backup` and `BackupShard`.

### Configuration

Before backing up or restoring a tablet, you need to ensure that the tablet is aware of the Backup Storage system and Backup Engine that you are using.

To do so, use command-line flags to configure vtbackup, vttablet, or vtctld programs that have access to the location where you are storing backups.

__Common flags:__

All three programs can be made aware of Backup Engine and Backup Storage using these common flags.

<table class="responsive">
  <thead>
    <tr>
      <th>Name</th>
      <th>Definition</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td><code>backup-storage-implementation</code></td>
      <td>Specifies the implementation of the Backup Storage interface to
        use.<br><br>
        Current plugin options available are:
        <ul>
          <li><code>file</code>: Using shared storage (e.g. NFS).</li>
          <li><code>gcs</code>: Google Cloud Storage.</li>
          <li><code>s3</code>: Amazon S3.</li>
          <li><code>ceph</code>: Ceph Object Gateway S3 API.</li>
        </ul>
      </td>
    </tr>
    <tr>
      <td><code>backup-engine-implementation</code></td>
      <td>Specifies the implementation of the Backup Engine to
        use.<br><br>
        Current options available are:
        <ul>
          <li><code>builtin</code>: Copy all the database files into specified storage. This is the default.</li>
          <li><code>xtrabackup</code>: Percona <a href="https://www.percona.com/software/mysql-database/percona-xtrabackup">XtraBackup</a>.</li>
        </ul>
      </td>
    </tr>
    <tr>
      <td><code>backup-log-to-storage</code></td>
      <td>Optional, disabled by default (<code>false</code>). When enabled, a backup
        operation writes the backup engine's log output to a separate file and uploads
        it to the backup storage as <code>BACKUP.log</code>. This lets operators inspect
        backup-specific engine output, or audit a backup, without searching the full
        <code>vttablet</code> log.<br><br>
        What gets uploaded depends on the backup result:
        <ul>
          <li>On a successful backup, the log is uploaded.</li>
          <li>On a failed backup, the log is uploaded on a best-effort basis, and the
            local copy is also retained on the tablet host, with its path written to the
            tablet log, because the storage directory is cleaned up when a backup is
            aborted.</li>
          <li>On an empty backup, no log is uploaded.</li>
        </ul>
        Enabling this flag adds one uploaded file per backup. The log is stored in the
        same backup storage directory (file, GCS, S3, or Ceph) as the backup data and
        MANIFEST.
      </td>
    </tr>
    <tr>
      <td><code>backup-storage-compress</code></td>
      <td>This flag controls if the backups are compressed by the Vitess code.
        By default it is set to true. Use
        <code>--backup-storage-compress=false</code> to disable.</br>
      </td>
    </tr>
    <tr>
      <td><code>backup-storage-block-size</code></td>
      <td>If <code>--backup-storage-compress</code> is true, <code>backup-storage-block-size</code> sets the block size in bytes to use while compressing (default is 250000).
      </td>
    </tr>
    <tr>
      <td><code>backup-storage-number-blocks</code></td>
      <td>If <code>--backup-storage-compress</code> is true, <code>backup-storage-number-blocks</code> sets the number of blocks that can be processed, in parallel, before the writer blocks, during compression. It should be equal to the number of CPUs available for compression. (default 2)
      </td>
    </tr>
    <td><code>compression-level</code></td>
      <td>Select what is the compression level (from `1..9`) to be used with the builtin compressors.
        It doesn't have any effect if you are using an external compressor. Defaults to
        <code>1</code> (fastest compression).
      </td>
    </tr>
    <tr>
      <td><code>compression-engine-name</code></td>
      <td>
        This indicates which compression engine to use. The default value is <code>pargzip</code>.
        If using an external compressor (see below), this should be a compatible compression engine as the
        value will be saved to the MANIFEST when creating the backup and can be used to decompress it.
      </td>
    </tr>
    <tr>
      <td><code>external-compressor</code></td>
      <td>
      Instead of compressing inside the <code>vttablet</code> process, use the external command to
      compress the input. The compressed stream needs to be written to <code>STDOUT</code>.</br></br>
      An example command to compress with an external compressor using the fastest mode and lowest CPU priority: </br>
      <code>--external-compressor "nice -n 19 pigz -1 -c"</code><br/><br/>
      If the backup is supported by one of the builtin engines, make sure to use <code>--compression-engine-name</code>
      so it can be restored without requiring <code>--external-decompressor</code> to be defined.
      </td>
    </tr>
    <tr>
      <td><code>external-compressor-extension</code></td>
      <td>
      Using the <code>--external-compressor-extension</code> flag will set the correct extension when
      writing the file. Only used for the <code>xtrabackupengine</code>.<br/><br/>
      Example: <code>--external-compressor-extension ".gz"</code>
      </td>
    </tr>
    <tr>
      <td><code>external-decompressor</code></td>
      <td>
      Use an external decompressor to process the backups. This overrides the builtin
      decompressor which would be automatically select the best engine based on the MANIFEST information.
      The decompressed stream needs to be written to <code>STDOUT</code>.</br></br>
      An example of how to use an external decompressor:</br>
      <code>--external-decompressor "pigz -d -c"</code>
      </td>
    </tr>
    <tr>
      <td><code>external-decompressor-use-manifest</code></td>
      <td>
      Allows the decompressor command stored in the backup manifest to be used at restore time. 
      This is disabled by default for security reasons: an attacker with write access to backup storage 
      could modify the manifest to execute arbitrary commands on the tablet as the Vitess user. 
      Only enable this flag if you trust your backup storage and understand the risks involved.
      </td>
    </tr>
    <tr>
      <td><code>file-backup-storage-root</code></td>
      <td>For the <code>file</code> plugin, this identifies the root directory
        for backups. This path <b>must</b> exist on shared storage to provide a global backup view for all vtctlds and vttablets.
      </td>
    </tr>
    <tr>
      <td><code>gcs-backup-storage-bucket</code></td>
      <td>For the <code>gcs</code> plugin, this identifies the
        <a href="https://cloud.google.com/storage/docs/concepts-techniques#concepts">bucket</a>
        to use.</td>
    </tr>
    <tr>
      <td><code>s3-backup-aws-region</code></td>
      <td>For the <code>s3</code> plugin, this identifies the AWS region.</td>
    </tr>
    <tr>
      <td><code>s3-backup-storage-bucket</code></td>
      <td>For the <code>s3</code> plugin, this identifies the AWS S3
        bucket.</td>
    </tr>
    <tr>
      <td><code>ceph-backup-storage-config</code></td>
      <td>For the <code>ceph</code> plugin, this identifies the path to a text
        file with a JSON object as configuration. The JSON object requires the
        following keys: <code>accessKey</code>, <code>secretKey</code>,
        <code>endPoint</code> and <code>useSSL</code>. Bucket name is computed
        from keyspace name and shard name is separated for different
        keyspaces / shards.</td>
    </tr>
    <tr>
      <td><code>restart-before-backup</code></td>
      <td>If set, perform a clean MySQL shutdown and startup cycle. Note this is not
       	executing any `FLUSH` statements. This enables users to work around <a href="https://jira.percona.com/browse/PXB-2205">xtrabackup
	DDL issues.</a></td>
    </tr>
    <tr>
      <td><code>xbstream-restore-flags</code></td>
      <td>The flags to pass to the xbstream command during restore. These should be space separated and will be added to the end of the command. These need to match the ones used for backup e.g. <code>--compress</code> / <code>--decompress</code>, <code>--encrypt</code> / <code>--decrypt</code></td>
    </tr>
    <tr>
      <td><code>xtrabackup-root-path</code></td>
      <td>For the <code>xtrabackup</code> backup engine, directory location of the xtrabackup executable, e.g., `/usr/bin`</td>
    </tr>
    <tr>
      <td><code>xtrabackup-backup-flags</code></td>
      <td>For the <code>xtrabackup</code> backup engine, flags to pass to the backup command. These should be space separated and will be added to the end of the command.</td>
    </tr>
    <tr>
      <td><code>xtrabackup-stream-mode</code></td>
      <td>For the <code>xtrabackup</code> backup engine, which mode to use if streaming, valid values are <code>tar</code> and <code>xbstream</code>. Defaults to <code>tar</code>.</td>
    </tr>
    <tr>
      <td><code>xtrabackup-user</code></td>
      <td>For the <code>xtrabackup</code> backup engine, required user that xtrabackup will use to connect to the database server. This user must have all necessary privileges. For details, please refer to xtrabackup documentation.</td>
    </tr>
    <tr>
      <td><code>xtrabackup-stripes</code></td>
      <td>For the <code>xtrabackup</code> backup engine, if greater than 0, use data striping across this many destination files to parallelize data transfer and decompression.</td>
    </tr>
    <tr>
      <td><code>xtrabackup-stripe-block-size</code></td>
      <td>For the <code>xtrabackup</code> backup engine, size in bytes of each block that gets sent to a given stripe before rotating to the next stripe. Defaults to <code>102400</code>.</td>
    </tr>
    <tr>
      <td><code>xtrabackup-prepare-flags</code></td>
      <td>Flags to pass to the prepare command. These should be space separated and will be added to the end of the command.</td>
    </tr>
    <tr>
      <td><code>builtinbackup-file-chunk-threshold</code></td>
      <td>For the <code>builtin</code> backup engine, files larger than this size
        (in bytes) are split into chunks for parallel backup and restore. Each chunk
        is backed up as an independent object in storage and can be restored
        concurrently. Set to <code>0</code> to disable chunking (default).
        <br><br>
        Must be greater than or equal to <code>builtinbackup-file-chunk-size</code>;
        this is validated when the backup starts, and a violation fails the backup.
        <br><br>
        <b>Compatibility note:</b> Backups created with chunking enabled
        <b>cannot be restored by Vitess versions earlier than v25</b>, as these versions do not understand the
        <code>Chunks</code> field in the backup MANIFEST. See more below.
      </td>
    </tr>
    <tr>
      <td><code>builtinbackup-file-chunk-size</code></td>
      <td>For the <code>builtin</code> backup engine, the target size in bytes for
        each chunk when splitting large files. Only used when
        <code>builtinbackup-file-chunk-threshold</code> is greater than 0.
        Minimum allowed value is 4 MiB. (default 1073741824 / 1 GiB)
      </td>
    </tr>
    <tr>
      <td><code>s3-backup-download-concurrency</code></td>
      <td>For the <code>s3</code> plugin, the number of parallel download workers
        (goroutines) used per file when restoring. The default of <code>1</code>
        preserves the original behavior: each file is downloaded with a single
        sequential <code>GetObject</code> call. Set this greater than
        <code>1</code> to download each file in parallel using concurrent
        byte-range GET requests via the AWS SDK transfer manager, which can
        reduce restore time for large backups. (default 1)
      </td>
    </tr>
    <tr>
      <td><code>s3-backup-download-part-size</code></td>
      <td>For the <code>s3</code> plugin, the size in bytes of each ranged GET
        request when parallel downloads are enabled
        (<code>s3-backup-download-concurrency</code> greater than 1). Has no
        effect when download concurrency is <code>1</code>. Minimum 5 MiB.
        (default 8388608 / 8 MiB)
      </td>
    </tr>
  </tbody>
</table>

__Restore flags:__

Only VTTablet can be configured to restore from a previous backup. The flags below only apply to VTTablet.

<table class="responsive">
  <thead>
    <tr>
      <th>Name</th>
      <th>Definition</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td><code>restore-from-backup</code></td>
      <td>Indicates that, when started with an empty MySQL instance, the
        tablet should restore the most recent backup from the specified
        storage plugin. This flag only applies to VTTablet.</td>
    </tr>
    <tr>
      <td><code>restore-from-backup-ts</code></td>
      <td>If set, restore the latest backup taken at or before this timestamp
        rather than using the most recent one. Example: ‘2021-04-29.133050’.
        (Vitess 12.0+)</td>
    </tr>
  </tbody>
</table>

### Authentication

Note that for the Google Cloud Storage plugin, we currently only support
[Application Default Credentials](https://developers.google.com/identity/protocols/application-default-credentials). This means that access to Google Cloud Storage (GCS) is automatically granted by virtue of the fact that you're already running within Google Compute Engine (GCE) or Google Kubernetes Engine (GKE).

For this to work, the GCE instances must have been created with the [scope](https://cloud.google.com/compute/docs/authentication#using) that grants read-write access to GCS. When using GKE, you can do this for all the instances it creates by adding `--scopes storage-rw` to the `gcloud container clusters create` command.

### Backup Frequency

We recommend to take backups regularly -- e.g. you should set up a cron job for it.

To determine the proper frequency for creating backups, consider the amount of time that you keep replication logs (see the [binlog_expire_logs](https://dev.mysql.com/doc/refman/8.0/en/replication-options-binary-log.html#sysvar_binlog_expire_logs_seconds) variables) and allow enough time to investigate and fix problems in the event that a backup operation fails.

For example, suppose you typically keep four days of replication logs and you create daily backups. In that case, even if a backup fails, you have at least a couple of days from the time of the failure to investigate and fix the problem.

### Concurrency

The backup and restore processes simultaneously copy and either compress or decompress multiple files to increase throughput. You can control the concurrency using command-line flags:

* The vtctl [Backup](https://vitess.io/docs/reference/programs/vtctl/tablets/#backup) command uses the `--concurrency` flag.
* vttablet uses the `--restore-concurrency` flag.

If the network link is fast enough, the concurrency matches the CPU usage of the process during the backup or restore process.

### Chunked Backup and Restore

The `builtin` backup engine can split large files into independently-compressed chunks so that they can be backed up and, more importantly, restored in parallel. This addresses a common bottleneck: when a keyspace is dominated by a few very large tables, a single large file is restored serially regardless of the `--restore-concurrency` setting, so those files end up determining the total restore time. Splitting them into chunks lets Vitess restore many pieces of the same file concurrently.

Chunking is a property of the `builtin` engine only. It does not apply to the `xtrabackup` or `mysqlshell` engines.

#### When to use it

Chunking helps most when a small number of files -- typically large InnoDB `.ibd` files -- make up a large share of your dataset, and restore time matters to you, for example when provisioning a new replica or recovering a shard. If your data is spread evenly across many similarly-sized files, the existing file-level concurrency already keeps all workers busy, and chunking adds little.

Chunking is disabled by default, so there is no chunking overhead unless you explicitly enable it.

#### How to enable it

Set `--builtinbackup-file-chunk-threshold` to a non-zero byte value to turn chunking on. Files larger than the threshold are split into chunks of `--builtinbackup-file-chunk-size` bytes (default 1 GiB), while files at or below the threshold are backed up whole. For example:

```bash
--builtinbackup-file-chunk-threshold=5368709120 # 5 GiB
--builtinbackup-file-chunk-size=1073741824       # 1 GiB
```

With this configuration, any file larger than 5 GiB is split into 1 GiB chunks during backup. On restore, those chunks are written concurrently to their positions in the destination file, sharing the same `--restore-concurrency` budget as the rest of the files.

These two flags are only used during backup. Restore is driven entirely by the backup MANIFEST, so no chunking flags are needed on the restoring tablet.

#### Constraint: threshold must be at least the chunk size

The threshold must be greater than or equal to the chunk size. Vitess validates this when the backup starts, and a violation fails the backup before it does any work. Because the default chunk size is 1 GiB, setting a threshold below 1 GiB without also lowering `--builtinbackup-file-chunk-size` fails every backup with an error like:

```
builtinbackup-file-chunk-threshold (N) must be >= builtinbackup-file-chunk-size (M)
```

The chunk size itself must be at least 4 MiB, since a very small chunk size would create an impractically large number of objects. These bounds are only enforced when chunking is enabled, that is, when the threshold is greater than 0.

#### Compatibility

Chunking is backward compatible when left disabled: with the default threshold of `0`, backups are byte-for-byte identical to the previous format and remain restorable by older Vitess versions. Once a backup is created with chunking enabled, however, it can only be restored by Vitess v25.0 or later. Older versions do not understand the `Chunks` field in the MANIFEST and cannot reassemble the chunked files, so plan your upgrades accordingly before enabling chunking in an environment where older tablets might perform restores.

### Parallel S3 Downloads

When restoring from S3, the `s3` backup storage plugin can download each backup file in parallel using the AWS SDK transfer manager, which issues concurrent byte-range GET requests instead of reading the file as a single sequential stream. This can improve restore throughput for large, multi-GB backups on deployments where a single-stream download does not saturate the available network bandwidth.

Parallel downloads apply only to the restore (download) path. They are distinct from upload concurrency and from the `builtin` engine's chunking described above, and they work with all S3 encryption modes (SSE-S3, SSE-KMS, and SSE-C).

Parallel downloads are disabled by default. With `--s3-backup-download-concurrency=1` -- the default -- the restore path is unchanged: one `GetObject` per file and no extra requests. Set `--s3-backup-download-concurrency` greater than 1 to enable them. This applies to any binary that restores from or reads S3 backups, such as `vttablet` and `vtbackup`.

#### How to tune it

Two flags control parallel downloads:

```bash
--s3-backup-download-concurrency=10   # parallel workers per file (default 1 = disabled)
--s3-backup-download-part-size=8388608 # 8 MiB ranged-GET size (default)
```

`--s3-backup-download-part-size` only takes effect when concurrency is greater than 1, and its minimum is 5 MiB.

To bound memory use, total per-file download memory is capped at 1 GiB, so a configuration must satisfy `part-size × concurrency + part-size ≤ 1 GiB`. A configuration that exceeds this fails fast at storage initialization. There is therefore no single maximum part size: the largest part size you can set depends on the concurrency you choose.

#### Operator trade-offs when enabled

Enabling parallel downloads changes how the restore interacts with S3:

* An extra `HeadObject` request is issued per file to determine its size before downloading. This includes MANIFEST reads during backup selection.
* The `AWS:Request:Send` stat is recorded per API call, so with parallel downloads it counts per part rather than per file. Existing dashboards will show higher request counts.
* The AWS SDK transfer manager busy-spins one goroutine per in-flight file download, which consumes CPU even on network-bound workloads. With the default `--restore-concurrency`, this competes with decompression for CPU. This is upstream SDK behavior.

### Backup Compression

By default, `vttablet` backups are compressed using `pargzip` that generates `gzip` compatible files. 
You can select other builtin engines that are supported, or choose to use an external process to do the
compression/decompression for you. There are some advantages of doing this, like being able to set the
scheduling priority or even to choose dedicated CPU cores to do the compression, things that are not possible when running inside the `vttablet` process.

The built-in supported engines are:

__Compression:__
- `pargzip` (default)
- `pgzip`
- `lz4`
- `zstd`

__Decompression:__
- `pgzip`
- `lz4`
- `zstd`

To change which compression engine to use, you can use the `--compression-engine-name` flag. The compression
engine will also be saved to the backup manifest, which is read during the decompression process to select
the right engine to decompress (so even if it gets changed, the `vttablet` will still be able to restore
previous backups).

If you want to use an external compressor/decompressor, you can do this by setting:
- `--external-compressor` with the command that will actually compress the stream;
- `--external-compressor-extension` (only if using xtrabackupengine): this will let you use the extension of the file saved
- `--compression-engine-name` with the compatible engine that can decompress it. Use `external` if you are using an external engine not included in the above supported list. This value will be saved to the backup
MANIFEST; If it is not added (or engine is `external`), backups won't be able to restore unless you pass the parameter below:
- `--external-decompressor` with the command used to decompress the files;

The `vttablet` process will launch the external process and pass the input stream via STDIN and expects
the process will write the compressed/decompressed stream to STDOUT.

If you are using an external compressor and want to move to a builtin engine:
- If the engine is supported according to the list above, you just need to make sure your `--compression-engine-name` is correct and you can remove
the `--external-compressor` parameter
- If you want to move away from an unsupported engine to a builtin one, then you have to:
    - First change the `--compression-engine-name` to a supported one and remove the `--external-compressor`
    - Once the first backup is completed, you can then remove `--external-decompressor`
    - After this all new backups will be done using the new engine. Restoring an older backup will still require the `--external-decompressor` flag to be provided

### Hooks

Vitess supports hooks that run at specific points during backup and restore operations. Hooks are executable scripts that let you integrate with external systems like monitoring, alerting, or notification services.

Place hook scripts in the `${VTROOT}/vthook/` directory on the tablet.

#### vttablet_restore_done

The `vttablet_restore_done` hook runs when a tablet completes a restore, whether the restore succeeded or failed. This hook is useful for:

* Sending notifications when restores complete
* Updating monitoring or alerting systems
* Tracking restore metrics and duration
* Triggering downstream automation based on restore outcomes

The following environment variables are passed to the hook:

| Variable | Description |
|----------|-------------|
| `TM_RESTORE_DATA_START_TS` | UTC timestamp when the restore started (RFC3339 format) |
| `TM_RESTORE_DATA_STOP_TS` | UTC timestamp when the restore ended (RFC3339 format) |
| `TM_RESTORE_DATA_DURATION` | Total duration of the restore operation (e.g., `5m30s`) |
| `TM_RESTORE_DATA_BACKUP_ENGINE` | The backup engine used to create the backup being restored (e.g., `builtin`, `xtrabackup`). Not set when restoring from a MySQL clone. |
| `TM_RESTORE_DATA_ERROR` | Error message if the restore failed. Only set when an error occurred. |
